# PythonTestSW

./: README.md
00_intro/: README.md
01_first_lesson/: README.md
02/: README.md
03/: 1.py  README.md
04/: examples.py  readme.md
lab10/: _config.yml  index.md  readme.md
lab11/: numerical_methods.ipynb  readme.md
lab12/: readme.md  visualization.ipynb
lab5/: lab5_examples.py  lab5_notebook.ipynb  readme.md
lab5/lab5-парадигма/: paradigms_demo.ipynb  paradigms_game.py
lab5/work-with-classes/: classes.ipynb  readme.md
lab6/: .gitignore  flask_jikan.py  readme.md  sample_requests.py
lab6/poetry_app/: app.py  pyproject.toml
lab7/: .gitignore  app.py  readme.md  sample_asserts.py  test_app.py  test_pytest.py
lab8/: readme.md  run_me.py
lab8/.github/workflows/: manual_workflow.yml  python_ci.yml
lab9/: .gitignore  db_demo.py  readme.md
